tests/invalid/syntax/annotation_empty_parens.nyx
// Invalid: Annotation without arguments using call syntax
@deprecated()
func old_function() -> ok
    pass
